--- a/src/scss/brends-style.scss
+++ b/src/scss/brends-style.scss
@@ -1,11 +1,19 @@
+.brends-block {
+  padding-bottom: 32px;
+}
+
 .section-header {
-  background: linear-gradient(to right, #f8f8f8 0%, #fff 98.61%);
+  background: linear-gradient(
+    to right,
+    $background-gray 0%,
+    $background-white 98.61%
+  );
   height: 56px;
   display: flex;
   align-items: center;
 
   &__title {
-    color: #7e7e82;
+    color: $link-gray;
     font-family: 'TT Lakes', 'Open Sans', 'Arial', sans-serif;
     font-size: 16px;
     font-style: normal;
@@ -51,9 +59,9 @@
   box-sizing: border-box;
   width: 240px;
   height: 72px;
-  background-color: #fff;
+  background-color: $background-white;
 
-  border: 1px solid #eaeaea;
+  border: 1px solid $brend-border;
   border-radius: 6px;
 }
 
@@ -77,7 +85,7 @@
   line-height: 24px;
   text-align: right;
   font-weight: 600;
-  color: #1b1c21;
+  color: $text-main;
   align-self: center;
 }
 
@@ -123,7 +131,7 @@
   }
 
   .swiper-pagination-bullet-active {
-    background-color: #b5b6bc;
+    background-color: $pagination-bullet;
   }
 
   .brends-list--show-part {
