--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,11 @@
-@import './style-variables.scss';
+@import './variables.scss';
 @import './src/scss/fontstyle.scss';
-@import './mainstyle.scss';
-@import './brends-style.scss';
+
+@import './main-block-style.scss';
+@import './brends-block-style.scss';
 @import './mobile-menu-style.scss';
+@import './devices-block-style.scss';
+@import './price-list-style.scss';
+
 @import './circle-button.scss';
+@import './form-button.scss';
