--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,9 @@
 @import './mobile-menu-style.scss';
 @import './devices-block-style.scss';
 @import './price-list-style.scss';
+@import './main-footer-style.scss';
+@import './feedback-form.scss';
+@import './call-form.scss';
 
 @import './circle-button.scss';
 @import './form-button.scss';
