--- a/src/scss/brends-block-style.scss
+++ b/src/scss/brends-block-style.scss
@@ -155,7 +155,7 @@
 
 /*--------------СЕТКА 768---------------*/
 
-@media (min-width: 768px) and (max-width: 1120px) {
+@media (min-width: $screen-md) {
   .header__title {
     padding-left: 24px;
   }
@@ -177,7 +177,7 @@
   }
 }
 /*--------------СЕТКА 1120---------------*/
-@media (min-width: $screen-xl) {
+@media (min-width: $screen-lg) {
   .brends-list {
     padding-left: 32px;
     column-gap: 32px;
