--- a/src/scss/mobile-menu-style.scss
+++ b/src/scss/mobile-menu-style.scss
@@ -1,28 +1,69 @@
-/*-----------Общий блок для меню--------*/
+.mobile-menu-block {
+  width: 320px;
+  height: 2000px;
+  background: $background-white;
+
+  // Сетка от 768px и выше
+  @media (min-width: $screen-md) {
+    & {
+      width: 100%;
+      height: 2000px;
+      background-color: rgba(255, 255, 255, 0.95);
+      overflow: hidden;
+      position: fixed;
+      top: 0px;
+
+      box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2),
+        -2px 0px 4px 0px rgba(69, 79, 126, 0.02);
+    }
+  }
+
+  @media (min-width: $screen-xl) {
+    & {
+      width: 320px;
+      height: 2000px;
+
+      position: relative;
+      top: 0px;
+      display: block;
+    }
+  }
+
+  &--hidden {
+    display: none;
+  }
+}
+
 .mobile-menu {
   position: absolute;
   margin: 0;
   padding-left: 24px;
   padding-right: 24px;
+
   left: 0;
   top: 0;
   width: 320px;
-  box-sizing: border-box;
   height: 100vh;
-  /*max-height: 1124px;*/
-  background: #fff;
+  box-sizing: border-box;
+
+  background: $background-white;
   box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2),
     -2px 0px 4px 0px rgba(69, 79, 126, 0.02);
 
   color: $text-main;
 
-  @media (min-width: $screen-xs) {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  /*@media (min-width: $screen-xs) {
     display: none;
   }
 
   @media (min-width: $screen-md) {
     display: none;
-  }
+  }*/
 
   @media (min-width: $screen-xl) {
     display: flex;
@@ -42,14 +83,6 @@
       margin-right: auto;
     }
   }
-}
-
-.mobile-menu__container {
-  max-height: 888px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 
 /*----------СТИЛИ МЕНЮ-------------------*/
