--- a/src/scss/brends-block-style.scss
+++ b/src/scss/brends-block-style.scss
@@ -1,12 +1,18 @@
 .brends-block {
   @media (min-width: $screen-xs) {
-    padding-bottom: 24px;
+    & {
+      padding-bottom: 24px;
+    }
   }
   @media (min-width: $screen-md) {
-    padding-bottom: 32px;
+    & {
+      padding-bottom: 32px;
+    }
   }
   @media (min-width: $screen-lg) {
-    padding-bottom: 50px;
+    & {
+      padding-bottom: 50px;
+    }
   }
 }
 
@@ -74,50 +80,8 @@
   border-radius: 6px;
 }
 
-.read-more-button {
-  /*сброс базовых стилей кнопок*/
-  padding: 0;
-  border: none;
-  font: inherit;
-  color: inherit;
-  background-color: transparent;
-  cursor: pointer;
-
-  /*сброс стиля фокуса*/
-  outline: none;
-  background: url(../img/read-more-close.svg) no-repeat left center;
-  height: 24px;
-  padding-left: 18px;
-  display: block;
-
-  font-size: 16px;
-  line-height: 24px;
-  text-align: right;
-  font-weight: 600;
-  color: $text-main;
-  align-self: center;
-}
-
-.read-more-button--open {
-  background: url(../img/read-more-open.svg) no-repeat left center;
-  padding-left: 22px;
-}
-
-.read-more-button--close {
-  background: url(../img/read-more-close.svg) no-repeat left center;
-}
-
-.read-more-button:hover {
-  opacity: 0.7;
-}
-
-.footer__read-more-button {
-  margin-top: 24px;
-  margin-left: 32px;
-}
-
 /*--------------СЕТКА 320---------------*/
-@media (max-width: 767px) {
+@media (min-width: $screen-xs) {
   .header__title {
     padding-left: 16px;
   }
@@ -134,7 +98,7 @@
   }
 
   .swiper {
-    height: 136px;
+    height: auto;
     width: 100%;
     padding-left: 16px;
   }
@@ -145,11 +109,7 @@
 
   .brends-list--show-part {
     /*МОДИФИКАТОР ПОКАЗАТЬ ЧАСТЬ ЭЛЕМЕНТОВ*/
-    height: 120px;
-  }
-
-  .read-more-button {
-    display: none;
+    height: 160px;
   }
 }
 
@@ -165,6 +125,8 @@
     padding-left: 24px;
     row-gap: 16px;
     align-content: start;
+    flex-wrap: wrap;
+    padding-top: 0;
   }
   .brends-list__brend {
     width: 224px;
@@ -172,18 +134,22 @@
   .brends-list__item {
     width: 224px;
   }
-  .for-pagination {
+  /*.for-pagination {
     display: none;
-  }
+  }*/
 }
 /*--------------СЕТКА 1120---------------*/
 @media (min-width: $screen-lg) {
   .brends-list {
     padding-left: 32px;
     column-gap: 32px;
+
+    &__brend {
+      width: 240px;
+    }
   }
 
-  .for-pagination {
+  /* .for-pagination {
     display: none;
-  }
+  }*/
 }
