--- a/src/scss/mobile-menu-style.scss
+++ b/src/scss/mobile-menu-style.scss
@@ -1,13 +1,13 @@
 .mobile-menu-block {
   width: 320px;
-  height: 2000px;
+  height: 2100px;
   background: $background-white;
 
   // Сетка от 768px и выше
   @media (min-width: $screen-md) {
     & {
       width: 100%;
-      height: 2000px;
+      height: 2100px;
       background-color: rgba(255, 255, 255, 0.95);
       overflow: hidden;
       position: fixed;
@@ -21,7 +21,7 @@
   @media (min-width: $screen-xl) {
     & {
       width: 320px;
-      height: 2000px;
+      height: 2100px;
 
       position: relative;
       top: 0px;
@@ -66,7 +66,18 @@
   }*/
 
   @media (min-width: $screen-xl) {
-    display: flex;
+    & {
+      display: flex;
+      box-shadow: none;
+
+      .circle-button--close-img {
+        display: none;
+      }
+
+      .circle-button--search-img {
+        display: block;
+      }
+    }
   }
 
   /*---------СТИЛИ ШАПКИ БОКОВОГО МЕНЮ------------*/
