--- a/src/scss/mobile-menu-style.scss
+++ b/src/scss/mobile-menu-style.scss
@@ -57,13 +57,18 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  /*@media (min-width: $screen-xs) {
-    display: none;
+  @media (min-width: $screen-xs) {
+    & {
+      min-width: 320px;
+      width: 100%;
+    }
   }
 
   @media (min-width: $screen-md) {
-    display: none;
-  }*/
+    & {
+      width: 320px;
+    }
+  }
 
   @media (min-width: $screen-xl) {
     & {
