--- a/src/scss/brends-block-style.scss
+++ b/src/scss/brends-block-style.scss
@@ -44,7 +44,7 @@
 .brends-list {
   margin: 0;
   padding-top: 24px;
-  padding-left: 32px;
+  padding-left: 0;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
@@ -117,12 +117,12 @@
 
 @media (min-width: $screen-md) {
   .header__title {
-    padding-left: 24px;
+    padding-left: 0;
   }
   .brends-list {
     display: flex;
     column-gap: 24px;
-    padding-left: 24px;
+    padding-left: 0;
     row-gap: 16px;
     align-content: start;
     flex-wrap: wrap;
@@ -141,7 +141,7 @@
 /*--------------СЕТКА 1120---------------*/
 @media (min-width: $screen-lg) {
   .brends-list {
-    padding-left: 32px;
+    padding-left: 0;
     column-gap: 32px;
 
     &__brend {
