--- a/src/scss/call-form.scss
+++ b/src/scss/call-form.scss
@@ -1,7 +1,21 @@
 .call-block {
-  width: 320px;
+  min-width: 320px;
+  width: 100%;
   height: 100vh;
 
+  &__mute-area {
+    min-width: 320px;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 1;
+
+    .call-block__close-button {
+      margin-top: 24px;
+      margin-left: 16px;
+    }
+  }
   // Сетка от 768px и выше
   @media (min-width: $screen-md) {
     & {
@@ -11,6 +25,25 @@
       overflow: hidden;
       position: fixed;
       top: 0px;
+
+      display: grid;
+      grid-template-columns: 1fr 440px;
+
+      &__mute-area {
+        grid-column: 1/2;
+        width: 100%;
+        max-width: 100%;
+        height: 100vh;
+
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .call-block__close-button {
+        margin-top: 60px;
+        margin-left: auto;
+        margin-right: 32px;
+      }
     }
   }
 
@@ -21,37 +54,55 @@
 
 .call-form {
   min-width: 320px;
-  max-width: 440px;
+  width: 100%;
   height: 100vh;
   background-color: $background-white;
+
+  border-left: 1px solid $link-border;
 
   position: absolute;
   top: 0px;
   right: 0px;
 
+  padding-top: 90px;
+
   box-shadow: 16px 0px 52px 0px rgba(14, 24, 80, 0.2),
     -2px 0px 4px 0px rgba(69, 79, 126, 0.02);
-
-  padding: 24px 16px;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   row-gap: 16px;
 
+  @media (min-width: $screen-md) {
+    & {
+      padding-top: 32px;
+      width: 440px;
+    }
+  }
+
+  .title__text {
+    padding-left: 16px;
+  }
+
   &__form-button {
     align-self: flex-end;
+    margin-right: 16px;
+    margin-top: 24px;
   }
   &__input {
-    width: 100%;
     height: 48px;
+    margin: 0 16px;
+    padding-left: 16px;
+
+    font-family: 'TT Lakes';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    color: $input-color;
 
     border-radius: 8px;
     border: 1px solid #eaeaea;
-  }
-  &__input::placeholder {
-    padding-left: 16px;
-    padding-top: 12px;
   }
 
   &__text {
@@ -60,6 +111,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: 16px;
+
+    margin: 0 16px;
 
     .link-ping {
       color: $button-ping;
