--- a/src/scss/main-block-style.scss
+++ b/src/scss/main-block-style.scss
@@ -23,6 +23,7 @@ body {
   //Включение Бокового мобильного меню при рамере 1440px
   @media (min-width: $screen-xl) {
     .mobile-menu-block {
+      // Старая разметка Флекс Контейнером
       display: block;
       width: 320px;
       position: relative;
@@ -34,18 +35,25 @@ body {
     }
   }
 }
+
 .blocks-without-menu {
   min-width: 320px;
 }
-.main-block {
+.main-slide {
   @media (min-width: $screen-xs) {
-    padding-bottom: 24px;
+    & {
+      padding-bottom: 24px;
+    }
   }
   @media (min-width: $screen-md) {
-    padding-bottom: 32px;
+    & {
+      padding-bottom: 32px;
+    }
   }
   @media (min-width: $screen-lg) {
-    padding-bottom: 50px;
+    & {
+      padding-bottom: 50px;
+    }
   }
 }
 
@@ -229,6 +237,9 @@ body {
     &__text--show-part {
       height: 90px;
       overflow: hidden;
+      @media (min-width: 639px) {
+        height: 80px;
+      }
     }
   }
   /*--------------СЕТКА 320---------------*/
@@ -255,7 +266,6 @@ body {
     }
     .illustraton__img {
       width: 100%;
-      max-height: 250px;
       padding-top: 20px;
     }
   }
@@ -287,12 +297,8 @@ body {
     }
     .illustraton__img {
       width: 100%;
-      height: auto;
       padding-top: 20px;
     }
-    /* .main-text {
-      display: block;
-    }*/
     .text {
       line-height: 20px;
     }
