--- a/src/scss/price-list-style.scss
+++ b/src/scss/price-list-style.scss
@@ -19,17 +19,8 @@
   padding-left: 0;
   display: flex;
 
-  &__item {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  &__item--first {
-    display: none;
-  }
   &__card {
     color: $text-main;
-    text-decoration: none;
     padding: 0 16px;
     margin: 0;
 
@@ -49,21 +40,13 @@
 
     .category {
       color: $link-gray;
-      font-family: 'TT Lakes';
+      opacity: 0.7218;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
     }
     .price-card__category {
       margin-top: 16px;
-    }
-    .card-text {
-      color: $text-main;
-      font-family: 'TT Lakes';
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      letter-spacing: 0.2px;
     }
 
     .price-card__card-text {
@@ -76,7 +59,9 @@
       bottom: 16px;
     }
   }
-
+  &__item--first {
+    display: none;
+  }
   /*  ГРИД Cетка с 768px и выше  */
   @media (min-width: $screen-md) {
     & {
@@ -176,11 +161,7 @@
   &__button {
     padding: 0;
     border: none;
-    font: inherit;
-    color: inherit;
     background-color: transparent;
-    cursor: pointer;
-    outline: none;
 
     color: $text-main;
     font-size: 16px;
