--- a/src/scss/read-more-button.scss
+++ b/src/scss/read-more-button.scss
@@ -10,10 +10,12 @@
 
   font-size: 16px;
   line-height: 24px;
-  text-align: right;
   font-weight: 500;
   color: $text-main;
   align-self: center;
+
+  text-align: left;
+  padding-left: 20px;
 }
 .read-more-button--open {
   background: url(../img/read-more-open.svg) no-repeat left center;
